tests/compiler_errors/const_eval_unsupported_intrinsic.tlp
const PUT_ONE 1 putu end